# dna-kmeres-parallel

./: .gitignore  CMakeLists.txt  kernels.h  main.cpp  main.cu  other.cpp  utils.h
